after changing some minor things

--- a/index.html
+++ b/index.html
@@ -315,12 +315,12 @@
 
                 <label for="">
                     Name
-                    <input type="text" class="input" placeholder="Name">
+                    <input type="text" class="input" placeholder="Name" required>
                 </label>
 
                 <label for="">
                     Email*
-                    <input type="text" class="input" placeholder="Email">
+                    <input type="text" class="input" placeholder="Email" required>
                 </label>
 
                 <label for="">
