after minor changes

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <li><a href="">Services</a></li>
                     <li><a href="">Uses Cases</a></li>
                     <li><a href="">Pricing</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li class="blog"><a href="">Blog</a></li>
                 </ul>
                 <ul class="icon-ul" style="gap: 20px;">
                     <li>
